prevent overflow of thoughts

--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  min-width: 0;
+  min-height: 0;
 }
 
 html {
